<package>

  <name>lslidar_ch_driver</name>
  <version>1.0.0</version>
  <description>
    ROS device driver for Leishen Ch lidar.
  </description>
  <maintainer email="zufanglei@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lslidar_ch_msgs</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>lslidar_ch_msgs</run_depend>

 <export>
    <nodelet plugin="${prefix}/nodelet_lslidar_ch.xml"/>
  </export>
</package>
