<package>

  <name>lslidar_driver</name>
  <version>1.0.0</version>
  <description>
    ROS device driver for Leishen ls lidar.
  </description>
  <maintainer email="zufanglei@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lslidar_msgs</build_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libpcl-all</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>lslidar_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libpcl-all</run_depend>

 <export>
    <nodelet plugin="${prefix}/nodelet_lslidar_ch.xml"/>
  </export>
</package>
