<package>

  <name>lslidar_m10</name>
  <version>1.2.0</version>
  <description>
    Basic ROS support for the Leishen M10 LIDARs.
  </description>
  <maintainer email="shaohuashu@lslidar.com">Nick Shu</maintainer>
  <author>Nick Shu</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_m10_driver</run_depend>
  <run_depend>lslidar_m10_msgs</run_depend>
  <run_depend>lslidar_m10_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
