<package>

  <name>lslidar_msgs</name>
  <version>1.2.0</version>
  <description>
    ROS message definitions for Leishen M10 LIDARs.
  </description>
  <maintainer email="honghangli@lslidar.com">Nick Li</maintainer>
  <author>Nick Li</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
