<?xml version="1.0"?>
<package format="2">
  <name>lslidar_msgs</name>
  <version>5.1.2</version>
  <description>lslidar_msgs: Custom messages and service definitions for system integration</description>
  <maintainer email="jianjiangxie@lslidar.com">lslidar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
</package>
